# calyx-rust

./: .gitignore  Cargo.toml  renderdoc.cap
.cargo/: config  config.toml
assets/: test.ron
assets/shaders/: basic.wgsl  camera.wgsl  constants.wgsl  cubemap_face.wgsl  gizmos.wgsl  grid.wgsl  inputs.wgsl  lights.wgsl  mesh.wgsl  mip_generator_2d.wgsl  mip_generator_cube.wgsl  pbr.wgsl  pbr_utils.wgsl
assets/shaders/environment/: brdf.wgsl  cubemap.wgsl  irradiance.wgsl  prefilter.old.wgsl  prefilter.wgsl  skybox.wgsl
editor/: Cargo.toml
editor/src/: camera.rs  icons.rs  lib.rs  main.rs  project_manager.rs  selection.rs  syntax_highlighting.rs  task_id.rs
editor/src/animator/: context.rs  graph.rs  mod.rs
editor/src/inspector/: asset_inspector.rs  inspector_registry.rs  mod.rs  type_inspector.rs  widgets.rs
editor/src/inspector/assets/: animation_graph_inspector.rs  material_inspector.rs  mod.rs  prefab_inspector.rs  shader_inspector.rs
editor/src/inspector/types/: asset_inspector.rs  asset_ref_inspector.rs  bool_inspector.rs  collider_inspector.rs  color_inspector.rs  float_inspector.rs  game_object_ref_inspector.rs  integer_inspector.rs  mod.rs  rigid_body_inspector.rs  string_inspector.rs  transform_inspector.rs  uuid_inspector.rs  vec_inspector.rs
editor/src/panel/: animator.rs  code_editor.rs  content_browser.rs  game.rs  inspector.rs  mod.rs  scene_hierarchy.rs  terminal.rs  viewport.rs
editor/src/widgets/: file_button.rs  list.rs  mod.rs  tab.rs  zoom_pan_area.rs
engine/: Cargo.toml
engine/engine_derive/: Cargo.toml
engine/engine_derive/src/: component.rs  deserialize_context.rs  fq.rs  lib.rs  reflect_trait.rs  reflect_type.rs  reflect_value.rs  resource.rs  type_uuid.rs
engine/src/: background.rs  class_registry.rs  context.rs  error.rs  lib.rs  resource.rs  type_registry.rs  utils.rs
engine/src/assets/: animation.rs  animation_graph.rs  asset.rs  asset_registry.rs  assets.rs  error.rs  loaded_asset.rs  material.rs  mesh.rs  mod.rs  skybox.rs  texture.rs
engine/src/component/: animator.rs  bone.rs  camera.rs  collider.rs  component.rs  directional_light.rs  id.rs  mesh.rs  mod.rs  point_light.rs  rigid_body.rs  skinned_mesh.rs  sky_light.rs  tps_camera.rs  transform.rs
engine/src/core/: counter.rs  error.rs  log_registry.rs  mod.rs  refs.rs  time.rs
engine/src/ecs/: component.rs  id.rs  mesh.rs  mod.rs  transform.rs
engine/src/ext/: egui.rs  mod.rs  nalgebra.rs
engine/src/input/: mod.rs
engine/src/math/: dist.rs  mod.rs  transform.rs
engine/src/net/: client.rs  message.rs  mod.rs  net.rs  network.rs  server.rs
engine/src/net/component/: mod.rs  object.rs  transform.rs
engine/src/physics/: config.rs  context.rs  debug.rs  mod.rs
engine/src/reflect/: mod.rs  reflect.rs  trait_meta.rs  type_info.rs  type_registry.rs
engine/src/reflect/impls/: color32.rs  glm.rs  mod.rs  rapier.rs  std.rs  std_default.rs  std_float.rs  std_int.rs  uuid.rs
engine/src/render/: asset_map.rs  asset_render_state.rs  buffer.rs  camera.rs  gizmo_renderer.rs  gizmos.rs  mod.rs  pipeline_options.rs  render_context.rs  render_utils.rs  scene_renderer.rs  shader.rs  shader_preprocessor.rs
engine/src/render/postprocess/: mod.rs  renderer.rs  step.rs
engine/src/scene/: entity_ref.rs  error.rs  game_object_ref.rs  mod.rs  prefab.rs  scene.rs  scene_manager.rs
engine/src/utils/: builder.rs  deserialize_context.rs  lib_name.rs  mod.rs  singleton.rs  type_id.rs  type_ids.rs  type_uuid.rs  type_uuid_impls.rs  type_uuids.rs
engine/utils_derive/src/: lib.rs
launcher/: Cargo.toml
launcher/src/: app.rs  main.rs
project/: Cargo.toml
project/assets/: cargo.template  cargo_template.txt  lib.template
project/src/: lib.rs
reflect/: Cargo.toml
reflect/reflect_derive/: Cargo.toml
reflect/reflect_derive/src/: fq.rs  lib.rs  reflect_trait.rs  reflect_type.rs  reflect_value.rs  type_uuid.rs
reflect/src/: lib.rs  main.rs  reflect.rs  registry.rs  trait_meta.rs  type_info.rs  type_registry.rs  type_uuid.rs  types.rs
reflect/src/impls/: color32.rs  glm.rs  mod.rs  std.rs  std_default.rs  std_float.rs  std_int.rs  uuid.rs
sandbox/: Cargo.toml  build.rs  project.toml
sandbox/assets/: Y Bot@Walking.fbx  cylinder.cxprefab  file_name.cxprefab  scene.cxscene  test.cxprefab  untitled.cxanim
sandbox/assets/materials/: default.cxmat  test.cxmat
sandbox/assets/meshes/: Y Bot@Idle.fbx  Y Bot@Running.fbx  Y Bot@Walking.fbx  y_bot_sprint.fbx
sandbox/src/: game.rs  lib.rs  network.rs  test.rs  tps_camera.rs
utils/: Cargo.toml
utils/src/: builder.rs  lib.rs  singleton.rs  type_ids.rs
utils/utils_derive/: Cargo.toml
utils/utils_derive/src/: lib.rs
