[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
project = { path = "../project" }
bytemuck.workspace = true
lazy_static.workspace = true
serde.workspace = true
inventory.workspace = true
num.workspace = true
num-derive.workspace = true
num-traits.workspace = true
sharedlib.workspace = true
convert_case.workspace = true
re_ui.workspace = true
rfd.workspace = true