[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[features]
default = ["x11"]
x11 = []
wayland = []

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
project = { path = "../project" }
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
egui_tiles.workspace = true
egui-wgpu.workspace = true
transform-gizmo-egui.workspace = true
lazy_static.workspace = true
serde.workspace = true
inventory.workspace = true
num.workspace = true
num-derive.workspace = true
num-traits.workspace = true
sharedlib.workspace = true
convert_case.workspace = true
re_ui.workspace = true
rfd.workspace = true
enum_dispatch.workspace = true
dunce.workspace = true
winit.workspace = true
rapier3d.workspace = true
nalgebra.workspace = true
nalgebra-glm.workspace = true
uuid.workspace = true
petgraph.workspace = true
serde_json.workspace = true
relative-path.workspace = true
mint.workspace = true
rusty_pool.workspace = true