[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
bytemuck = "1.14.0"
common-path = "1.0.0"
eframe = { version = "0.27.2", features = ["wgpu", "persistence"] }
egui = { version = "0.27.2", features = ["mint", "persistence"] }
egui_dock = "0.12.0"
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
egui-wgpu = "0.27.2"
transform-gizmo-egui = "0.1.0"
enum-map = "2.7.0"
lazy_static = "1.4.0"
log = "0.4.20"
serde = "1.0.189"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize", "convert-mint"] }
rapier3d = { version = "0.19.0", features = ["serde-serialize", "debug-render"] }
russimp = { version = "3.2.0", features = ["prebuilt"] }
notify = "6.1.1"
inventory = "0.3.12"
sha-1 = "0.10.1"
engine_derive = { path = "./engine_derive" }
impls = "1.0.3"
legion = "0.4.0"
wgsl_preprocessor = "1.1.3"
nalgebra = { version = "0.32.3", features = ["mint", "convert-mint"] }
serde_json = "1.0.107"
glob = "0.3.1"
relative-path = "1.9.0"
path-absolutize = "3.1.1"
rusty_pool = "0.7.0"
image = "0.25.1"
naga = { version = "0.20.0", features = ["wgsl-in"] }
toml = "0.8.1"
downcast-rs = "1.2.0"
mint = "0.5.9"
regex = "1.10.3"
petgraph = "0.6.5"
