[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
engine_derive = { path = "./engine_derive" }
bytemuck.workspace = true
common-path.workspace = true
dunce.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
egui_tiles.workspace = true
egui-wgpu.workspace = true
transform-gizmo-egui.workspace = true
enum-map.workspace = true
lazy_static.workspace = true
log.workspace = true
serde.workspace = true
uuid.workspace = true
nalgebra-glm.workspace = true
rapier3d.workspace = true
russimp.workspace = true
notify.workspace = true
inventory.workspace = true
sha-1.workspace = true
impls.workspace = true
legion.workspace = true
wgsl_preprocessor.workspace = true
nalgebra.workspace = true
serde_json.workspace = true
glob.workspace = true
relative-path.workspace = true
path-absolutize.workspace = true
rusty_pool.workspace = true
image.workspace = true
naga.workspace = true
toml.workspace = true
downcast-rs.workspace = true
mint.workspace = true
regex.workspace = true
petgraph.workspace = true
winit.workspace = true
approx.workspace = true
