[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
engine_derive = { path = "./engine_derive" }
bimap.workspace = true
bytemuck.workspace = true
common-path.workspace = true
dunce.workspace = true
eframe.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
transform-gizmo-egui.workspace = true
serde.workspace = true
uuid.workspace = true
nalgebra-glm.workspace = true
rapier3d.workspace = true
russimp.workspace = true
notify.workspace = true
inventory.workspace = true
sha-1.workspace = true
legion.workspace = true
nalgebra.workspace = true
serde_json.workspace = true
glob.workspace = true
relative-path.workspace = true
path-absolutize.workspace = true
rusty_pool.workspace = true
image.workspace = true
naga.workspace = true
downcast-rs.workspace = true
mint.workspace = true
regex.workspace = true
petgraph.workspace = true
approx.workspace = true
derive_builder.workspace = true
paste.workspace = true
renet.workspace = true
renet_netcode.workspace = true
renet_visualizer.workspace = true
bincode.workspace = true
num-traits.workspace = true