[package]
name = "launcher"
authors = ["Ruben <ruben.e.sanchez.a@gmail.com>", "Cristian"]
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.22.0", features = ["wgpu"] }
egui = "0.22.0"
egui-modal = "0.2.4"
project = { path = "../project" }
dirs = "5.0.1"
serde_json = "1.0.105"
serde = { version = "1.0.183", features = ["derive"] }
rfd = "0.12.0"