[package]
name = "launcher"
authors = ["Ruben <ruben.e.sanchez.a@gmail.com>", "Cristian"]
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.23.0", features = ["wgpu"] }
egui = "0.23.0"
egui-modal = "0.2.5"
project = { path = "../project" }
dirs = "5.0.1"
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
rfd = "0.12.1"
