[package]
name = "launcher"
authors = ["Ruben <ruben.e.sanchez.a@gmail.com>", "Cristian"]
version = "0.1.0"
edition = "2021"

[dependencies]
project = { path = "../project" }
eframe.workspace = true
egui.workspace = true
serde.workspace = true
serde_json.workspace = true
rfd.workspace = true
egui-modal.workspace = true
dirs.workspace = true
