[package]
name = "reflect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
quote = "1.0.33"
egui = "0.23.0"
reflect_derive = { path = "reflect_derive" }
inventory = "0.3.12"
impls = "1.0.3"
downcast-rs = "1.2.0"
utils = { path = "../utils" }
lazy_static = "1.4.0"
num-traits = "0.2.17"
nalgebra-glm = "0.18.0"
uuid = "1.5.0"
