[package]
name = "reflect_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.69"
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
quote = "1.0.33"
uuid = { version = "1.6.1", features = ["v4"] }
sha-1 = "0.10.1"

[lib]
proc-macro = true
