[package]
name = "utils_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
syn = { version = "2.0.22", features = ["full", "extra-traits"] }
quote = "1.0.9"
uuid = "0.8"
sha-1 = "0.9"

[lib]
proc-macro = true
